--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   db:
     image: postgres:14.2-alpine
     restart: always
+    ports:
+    - 5432:5432
     environment:
       POSTGRES_DB: postgres
       POSTGRES_USER: postgres
