--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -34,9 +34,7 @@ dependencies:
   google_mlkit_text_recognition: ^0.3.0
   image_picker: ^0.8.5
   video_player: ^2.1.4
-
-  # camera: ^0.9.4
-
+  camera: ^0.9.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
