--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   image_picker: ^0.8.5
   video_player: ^2.1.4
   camera: ^0.9.4
+  image: ^3.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
