--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   video_player: ^2.1.4
   camera: ^0.9.4
   image: ^3.1.0
+  path_provider: ^2.0.11
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
