--- a/app/windows/runner/Runner.rc
+++ b/app/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "megaphone" "\0"
+            VALUE "FileDescription", "vocab" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "megaphone" "\0"
+            VALUE "InternalName", "vocab" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "megaphone.exe" "\0"
-            VALUE "ProductName", "megaphone" "\0"
+            VALUE "OriginalFilename", "vocab.exe" "\0"
+            VALUE "ProductName", "vocab" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
