--- a/app/android/app/src/main/AndroidManifest.xml
+++ b/app/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.megaphone">
+    package="com.example.vocab">
    <application
-        android:label="megaphone"
+        android:label="vocab"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
