--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -1,4 +1,4 @@
-name: megaphone
+name: vocab
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
