--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   camera: ^0.9.4
   image: ^3.1.0
   path_provider: ^2.0.11
+  language_picker: ^0.4.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -66,7 +67,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - secrets.json
+    - assets/secrets.json
+    - assets/google_translation_supported_languages.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
