--- a/app/android/app/src/main/AndroidManifest.xml
+++ b/app/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.vocab">
+    package="com.lucianovanderveekens.vocab">
    <application
         android:label="vocab"
         android:name="${applicationName}"
