--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path_provider: ^2.0.11
   uuid: ^3.0.6
   flutter_launcher_icons: "^0.10.0"
+  flutter_svg: "^1.1.3"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -57,7 +58,7 @@ dev_dependencies:
 
 flutter_icons:
   ios: true
-  image_path: "assets/icon.png"
+  image_path: "assets/app-icon.png"
   remove_alpha_ios: true
 
 # For information on the generic Dart part of this file, see the
@@ -77,7 +78,8 @@ flutter:
     - assets/languages.json
     - assets/google_translation_languages.json
     - assets/text_recognition_languages.json
-    - assets/icon.png
+    - assets/app-icon.png
+    - assets/icon.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
