--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   uuid: ^3.0.6
   flutter_launcher_icons: "^0.10.0"
   flutter_svg: "^1.1.3"
+  audioplayers: "^1.1.0"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -78,6 +79,7 @@ flutter:
     - assets/text_recognition_languages.json
     - assets/app-icon.png
     - assets/icon.svg
+    - assets/test.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
