--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -36,9 +36,10 @@ dependencies:
   image: ^3.1.0
   path_provider: ^2.0.11
   uuid: ^3.0.6
-  flutter_launcher_icons: "^0.10.0"
-  flutter_svg: "^1.1.3"
-  audioplayers: "^1.1.0"
+  flutter_launcher_icons: ^0.10.0
+  flutter_svg: ^1.1.3
+  audioplayers: ^1.1.0
+  get_it: ^7.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
