--- a/app/ios/Podfile
+++ b/app/ios/Podfile
@@ -37,5 +37,10 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+    target.build_configurations.each do |config|
+      if config.build_settings['WRAPPER_EXTENSION'] == 'bundle'
+        config.build_settings['DEVELOPMENT_TEAM'] = 'YQE9J8XKA2'
+      end
+    end
   end
 end
