Migrate deck storage to v2

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -83,6 +83,7 @@ flutter:
     - assets/app-icon.png
     - assets/icon.svg
     - assets/test.mp3
+    - assets/debug/initial_deck.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
